--- a/configs/thermal-engine-8996.conf
+++ b/configs/thermal-engine-8996.conf
@@ -9,7 +9,7 @@ sampling         5000
 device           cpu_voltage
 set_point        40000
 set_point_clr    38500
-device_perf_floor 1036800
+device_perf_floor 2150000
 
 [SS-CPUS-ALL]
 algo_type        ss
@@ -42,7 +42,7 @@ sampling         5000
 thresholds       38000      39500      41000      42500
 thresholds_clr   37000      38500      40000      41500
 actions          gpu        gpu        gpu        gpu
-action_info      510000000  315000000  214000000  133000000
+action_info      624000000  510000000  315000000  214000000  133000000
 
 [CHG_MONITOR]
 algo_type        monitor
